--- a/frontend/web/uw/sass/history.scss
+++ b/frontend/web/uw/sass/history.scss
@@ -3,6 +3,41 @@
     border-color: #A1A6AF;
     color: #A1A6AF;
   }
+  .pagination {
+    width: 100%;
+    margin-top: 100px;
+    text-align: center;
+    li {
+      margin: 0px 4px;
+      display: inline-block;
+      a {
+        font-size: 15px;
+        line-height: 38px;
+        width: 42px;
+        display: inline-block;
+        border: 1px solid #A1A6AF;
+        color: #010211;
+        padding: 0px;
+        text-align: center;
+        -webkit-border-radius: 0 !important;
+        -moz-border-radius: 0 !important;
+        border-radius: 0 !important;
+      }
+      &.active {
+        a, a:hover {
+          color: white;
+          background: #3B0F50;
+          border: 1px solid #3B0F50;
+        }
+      }
+      &:hover {
+        a {
+          background: #eee;
+          border: 1px solid #A1A6AF;
+        }
+      }
+    }
+  }
   .history-header {
     margin-top: -133px;
     background: url('../../images/history/history_bg.jpg') no-repeat center;
