--- a/frontend/web/uw/sass/timeline.scss
+++ b/frontend/web/uw/sass/timeline.scss
@@ -4,7 +4,6 @@
 
 .timeline {
 	color: #010211;
-
 	.top_block {
 		padding-top: 0px;
 	}
@@ -174,7 +173,7 @@
 				}
 			}
 
-			@media screen and (min-width: 1366px) and (max-width: 1599px) {
+			@media screen and (min-width: 1366px) {
 				.date {
 					padding: 25.5px 0 0 25.5px;
 					height: 120px;
