--- a/frontend/web/uw/stylesheets/uw.css
+++ b/frontend/web/uw/stylesheets/uw.css
@@ -36,39 +36,35 @@ body {
   left: -15px;
   width: 110px;
 }
-/* line 31, ../sass/uw.scss */
-.top_block.white .social a {
-  color: white;
-}
-/* line 35, ../sass/uw.scss */
+/* line 30, ../sass/uw.scss */
 .top_block.white .go_front {
   color: #3B0F50;
   border: 1px solid #3B0F50;
 }
-/* line 40, ../sass/uw.scss */
+/* line 35, ../sass/uw.scss */
 .top_block .social {
   float: right;
   position: absolute;
   right: 2px;
   top: 36px;
 }
-/* line 45, ../sass/uw.scss */
+/* line 40, ../sass/uw.scss */
 .top_block .social a {
   margin-left: 38px;
-  color: #003878;
+  color: #361750;
   font-size: 17px;
   transition: all 0.3s linear;
 }
-/* line 50, ../sass/uw.scss */
+/* line 45, ../sass/uw.scss */
 .top_block .social a:nth-child(1) {
   margin-left: 0px;
 }
-/* line 53, ../sass/uw.scss */
+/* line 48, ../sass/uw.scss */
 .top_block .social a:hover {
-  color: #E1C6A9;
+  color: #b99c2d;
 }
 @media screen and (max-width: 999px) {
-  /* line 40, ../sass/uw.scss */
+  /* line 35, ../sass/uw.scss */
   .top_block .social {
     float: right;
     position: absolute;
@@ -77,13 +73,13 @@ body {
     text-align: right;
     width: 119px;
   }
-  /* line 64, ../sass/uw.scss */
+  /* line 59, ../sass/uw.scss */
   .top_block .social a {
     display: inline-block;
     margin-bottom: 27px;
   }
 }
-/* line 70, ../sass/uw.scss */
+/* line 65, ../sass/uw.scss */
 .top_block .go_front {
   border: 1px solid #a1a4ad;
   color: #010211;
@@ -94,7 +90,7 @@ body {
   padding: 0px 42px;
   position: relative;
 }
-/* line 79, ../sass/uw.scss */
+/* line 74, ../sass/uw.scss */
 .top_block .go_front i {
   margin-right: 10px;
   position: relative;
@@ -102,7 +98,7 @@ body {
   font-size: 22px;
 }
 
-/* line 87, ../sass/uw.scss */
+/* line 82, ../sass/uw.scss */
 .container_inner {
   width: 934px;
   margin: 0 auto;
@@ -110,52 +106,52 @@ body {
   z-index: 1;
 }
 @media screen and (max-width: 933px) {
-  /* line 87, ../sass/uw.scss */
+  /* line 82, ../sass/uw.scss */
   .container_inner {
     width: 100%;
   }
 }
 
-/* line 97, ../sass/uw.scss */
+/* line 92, ../sass/uw.scss */
 .wrap {
   width: 100%;
   background: #EEEFF3;
   overflow: hidden;
 }
 
-/* line 104, ../sass/uw.scss */
+/* line 99, ../sass/uw.scss */
 .grid_wrap {
   margin-top: 35px;
   padding-top: 13px;
 }
 
-/* line 109, ../sass/uw.scss */
+/* line 104, ../sass/uw.scss */
 #cboxContent {
   background: none;
 }
 
-/* line 112, ../sass/uw.scss */
+/* line 107, ../sass/uw.scss */
 #cboxLoadedContent {
   background: none;
 }
 
-/* line 115, ../sass/uw.scss */
+/* line 110, ../sass/uw.scss */
 #cboxTitle {
   display: none;
 }
 
-/* line 118, ../sass/uw.scss */
+/* line 113, ../sass/uw.scss */
 .map-title {
   font-family: "Proxima Nova Regular", sans-serif;
   font-weight: bold;
 }
 
-/* line 123, ../sass/uw.scss */
+/* line 118, ../sass/uw.scss */
 .gallery_popup img {
   max-width: 100%;
   height: auto;
 }
-/* line 127, ../sass/uw.scss */
+/* line 122, ../sass/uw.scss */
 .gallery_popup .popup_text {
   font: 30px "Proxima Nova Thin", sans-serif;
   font-weight: 300;
@@ -163,13 +159,13 @@ body {
   padding-top: 46px;
   text-align: center;
 }
-/* line 134, ../sass/uw.scss */
+/* line 129, ../sass/uw.scss */
 .gallery_popup .close {
   float: none;
   padding-top: 20px;
   opacity: 1;
 }
-/* line 138, ../sass/uw.scss */
+/* line 133, ../sass/uw.scss */
 .gallery_popup .close img {
   width: 120px;
   height: 120px;
@@ -177,18 +173,18 @@ body {
   display: block;
 }
 
-/* line 146, ../sass/uw.scss */
+/* line 141, ../sass/uw.scss */
 #cboxOverlay {
   background: #3B0F50;
   opacity: 0.9;
 }
 
-/* line 150, ../sass/uw.scss */
+/* line 145, ../sass/uw.scss */
 .popups_info {
   display: none;
 }
 
-/* line 156, ../sass/uw.scss */
+/* line 151, ../sass/uw.scss */
 .bottom_gallery .title_bottom_gallery {
   font-size: 15px;
   color: #000108;
@@ -198,21 +194,21 @@ body {
   padding: 0px 10px;
   padding-bottom: 29px;
 }
-/* line 165, ../sass/uw.scss */
+/* line 160, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img {
   position: relative;
 }
-/* line 167, ../sass/uw.scss */
+/* line 162, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video {
   display: block;
 }
-/* line 169, ../sass/uw.scss */
+/* line 164, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video img {
   display: block;
   width: 100%;
   height: auto;
 }
-/* line 174, ../sass/uw.scss */
+/* line 169, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video:before {
   content: '';
   position: absolute;
@@ -224,7 +220,7 @@ body {
   background-size: 134px;
   z-index: 1;
 }
-/* line 185, ../sass/uw.scss */
+/* line 180, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video::after {
   content: '';
   position: absolute;
@@ -236,7 +232,7 @@ body {
   background-size: 134px;
   z-index: 0;
 }
-/* line 197, ../sass/uw.scss */
+/* line 192, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img iframe {
   position: absolute;
   top: 0px;
@@ -246,34 +242,34 @@ body {
   display: none;
 }
 
-/* line 208, ../sass/uw.scss */
+/* line 203, ../sass/uw.scss */
 .blue_top_bg {
   position: relative;
 }
 
-/* line 221, ../sass/uw.scss */
+/* line 216, ../sass/uw.scss */
 #object-map {
   position: relative;
   z-index: 1;
 }
 
-/* line 226, ../sass/uw.scss */
+/* line 221, ../sass/uw.scss */
 .white_text {
   color: white !important;
 }
 
-/* line 229, ../sass/uw.scss */
+/* line 224, ../sass/uw.scss */
 .purple_text {
   color: #3B0F50 !important;
 }
 
-/* line 233, ../sass/uw.scss */
+/* line 228, ../sass/uw.scss */
 .bottom_select_gallery {
   padding-top: 122px;
   display: flex;
   flex-wrap: wrap;
 }
-/* line 237, ../sass/uw.scss */
+/* line 232, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery {
   width: 25%;
   position: relative;
@@ -281,12 +277,12 @@ body {
   overflow: hidden;
 }
 @media screen and (max-width: 999px) {
-  /* line 237, ../sass/uw.scss */
+  /* line 232, ../sass/uw.scss */
   .bottom_select_gallery .select_gallery {
     width: 50%;
   }
 }
-/* line 245, ../sass/uw.scss */
+/* line 240, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:before {
   content: '';
   display: none;
@@ -297,20 +293,43 @@ body {
   height: 100%;
   z-index: 2;
 }
-/* line 256, ../sass/uw.scss */
+/* line 251, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:hover:before {
   display: block;
 }
-/* line 259, ../sass/uw.scss */
+/* line 254, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:hover img {
   -webkit-transform: scale(1.4);
   -ms-transform: scale(1.4);
   transform: scale(1.4);
 }
-/* line 265, ../sass/uw.scss */
+/* line 260, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery img {
   display: block;
   width: 100%;
   height: auto;
   transition: .5s;
+}
+
+/* line 268, ../sass/uw.scss */
+.site-error {
+  text-align: center;
+}
+/* line 270, ../sass/uw.scss */
+.site-error h1 {
+  margin-bottom: 20px;
+  font: 200px 'Proxima Nova', sans-serif;
+  color: #C59D17;
+  line-height: 130px;
+}
+/* line 276, ../sass/uw.scss */
+.site-error p {
+  font-size: 18px;
+}
+
+@media screen and (max-width: 410px) {
+  /* line 282, ../sass/uw.scss */
+  .site-error h1 {
+    font-size: 150px;
+  }
 }
