Правки по тикетам ++

--- a/frontend/web/uw/sass/uw.scss
+++ b/frontend/web/uw/sass/uw.scss
@@ -284,3 +284,14 @@ body {
 		}
 	}
 }
+#preloader {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 999;
+	background: #eeeff1 url('../../images/preloader/preloader_01_blue.gif') no-repeat center;
+	-webkit-background-size: 200px;
+	background-size: 200px;
+}
