--- a/frontend/web/uw/sass/uw.scss
+++ b/frontend/web/uw/sass/uw.scss
@@ -295,3 +295,29 @@ body {
 	-webkit-background-size: 200px;
 	background-size: 200px;
 }
+.jw-display-icon-container {
+	background: transparent !important;
+	width: 130px !important;
+	height: 130px !important;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	border: 2px solid #E1C6A9 !important;
+	.jw-icon {
+		display: block !important;
+		width: 60px !important;
+		height: 60px !important;
+		line-height: 60px !important;
+		font-size: 14px !important;
+		margin: 33px !important;
+		background: #E1C6A9 !important;
+		-webkit-border-radius: 50%;
+		-moz-border-radius: 50%;
+		border-radius: 50%;
+		color: #361750 !important;
+	}
+}
+.jw-preview {
+	-webkit-background-size: cover !important;
+	background-size: cover !important;
+}
